Update command data for Honda/Pilot

--- a/tests/test_cases/2017/commands/DA10.10.222662.yaml
+++ b/tests/test_cases/2017/commands/DA10.10.222662.yaml
@@ -2,6 +2,7 @@ command_id: DA10.10.222662
 test_cases:
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.26667
+    HONDA_KNOCK_CTRL: 0.26667
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -15,6 +16,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.29804
+    HONDA_KNOCK_CTRL: 0.29804
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -28,6 +30,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.29804
+    HONDA_KNOCK_CTRL: 0.29804
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -41,6 +44,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.29804
+    HONDA_KNOCK_CTRL: 0.29804
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -54,6 +58,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.31373
+    HONDA_KNOCK_CTRL: 0.31373
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -67,6 +72,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.31373
+    HONDA_KNOCK_CTRL: 0.31373
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -80,6 +86,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.32157
+    HONDA_KNOCK_CTRL: 0.32157
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -93,6 +100,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.3451
+    HONDA_KNOCK_CTRL: 0.3451
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -106,6 +114,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.36863
+    HONDA_KNOCK_CTRL: 0.36863
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -119,6 +128,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.4
+    HONDA_KNOCK_CTRL: 0.4
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -132,6 +142,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.4
+    HONDA_KNOCK_CTRL: 0.4
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -145,6 +156,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.41569
+    HONDA_KNOCK_CTRL: 0.41569
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -158,6 +170,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.41569
+    HONDA_KNOCK_CTRL: 0.41569
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -171,6 +184,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.43922
+    HONDA_KNOCK_CTRL: 0.43922
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -184,6 +198,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.4549
+    HONDA_KNOCK_CTRL: 0.4549
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -197,6 +212,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.46275
+    HONDA_KNOCK_CTRL: 0.46275
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -210,6 +226,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.48627
+    HONDA_KNOCK_CTRL: 0.48627
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -223,6 +240,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.48627
+    HONDA_KNOCK_CTRL: 0.48627
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -236,6 +254,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.5098
+    HONDA_KNOCK_CTRL: 0.5098
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -249,6 +268,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.5098
+    HONDA_KNOCK_CTRL: 0.5098
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -262,6 +282,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.52549
+    HONDA_KNOCK_CTRL: 0.52549
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -275,6 +296,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.52549
+    HONDA_KNOCK_CTRL: 0.52549
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -288,6 +310,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.52549
+    HONDA_KNOCK_CTRL: 0.52549
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -301,6 +324,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.54118
+    HONDA_KNOCK_CTRL: 0.54118
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -314,6 +338,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.54902
+    HONDA_KNOCK_CTRL: 0.54902
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -327,6 +352,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.66667
+    HONDA_KNOCK_CTRL: 0.66667
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -340,6 +366,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.70588
+    HONDA_KNOCK_CTRL: 0.70588
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -353,6 +380,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.66667
+    HONDA_KNOCK_CTRL: 0.66667
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -366,6 +394,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 1.04314
+    HONDA_KNOCK_CTRL: 1.04314
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -379,6 +408,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.43922
+    HONDA_KNOCK_CTRL: 0.43922
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -392,6 +422,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.78431
+    HONDA_KNOCK_CTRL: 0.78431
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
@@ -405,6 +436,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0.44706
+    HONDA_KNOCK_CTRL: 0.44706
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF11010396226622CF030
