--- a/tests/test_cases/2023/commands/DA10.10.222611.yaml
+++ b/tests/test_cases/2023/commands/DA10.10.222611.yaml
@@ -2,6 +2,7 @@ command_id: DA10.10.222611
 test_cases:
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -14,6 +15,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -26,6 +28,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -38,6 +41,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -50,6 +54,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -62,6 +67,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -74,6 +80,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -86,6 +93,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -98,6 +106,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -110,6 +119,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -122,6 +132,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -134,6 +145,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -146,6 +158,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -158,6 +171,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -170,6 +184,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -182,6 +197,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -194,6 +210,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -206,6 +223,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -218,6 +236,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -230,6 +249,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -242,6 +262,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -254,6 +275,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -266,6 +288,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -278,6 +301,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -290,6 +314,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -302,6 +327,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -314,6 +340,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -326,6 +353,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -338,6 +366,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -350,6 +379,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -362,6 +392,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -374,6 +405,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -386,6 +418,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -398,6 +431,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 0
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
