--- a/tests/test_cases/2023/commands/DA10.10.222662.yaml
+++ b/tests/test_cases/2023/commands/DA10.10.222662.yaml
@@ -2,6 +2,7 @@ command_id: DA10.10.222662
 test_cases:
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F3F3
@@ -15,6 +16,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F3F3
@@ -28,6 +30,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F3F3
@@ -41,6 +44,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F3F3
@@ -54,6 +58,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F3F3
@@ -67,6 +72,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F3F3
@@ -80,6 +86,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 52.54902
   response: |-
     18DAF110103962266220F3F3
@@ -93,6 +100,7 @@ test_cases:
     18DAF1102800805555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F3F3
@@ -106,6 +114,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 47.84314
   response: |-
     18DAF110103962266220F3F3
@@ -119,6 +128,7 @@ test_cases:
     18DAF1102800AC5555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 48.62745
   response: |-
     18DAF110103962266220F3F3
@@ -132,6 +142,7 @@ test_cases:
     18DAF1102800265555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 49.01961
   response: |-
     18DAF110103962266220F3F3
@@ -145,6 +156,7 @@ test_cases:
     18DAF1102800325555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 49.01961
   response: |-
     18DAF110103962266220F3F3
@@ -158,6 +170,7 @@ test_cases:
     18DAF11028010C5555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 25.88235
   response: |-
     18DAF110103962266220F3F3
@@ -171,6 +184,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F3F3
@@ -184,6 +198,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F3F3
@@ -197,6 +212,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F3F3
@@ -210,6 +226,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F3F3
@@ -223,6 +240,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F3F3
@@ -236,6 +254,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 46.66667
   response: |-
     18DAF110103962266220F3F3
@@ -249,6 +268,7 @@ test_cases:
     18DAF1102800325555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F3F3
@@ -262,6 +282,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 47.45098
   response: |-
     18DAF110103962266220F3F3
@@ -275,6 +296,7 @@ test_cases:
     18DAF1102800875555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F3F3
@@ -288,6 +310,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 50.58824
   response: |-
     18DAF110103962266220F3F3
@@ -301,6 +324,7 @@ test_cases:
     18DAF1102800835555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 53.33333
   response: |-
     18DAF110103962266220F3F3
@@ -314,6 +338,7 @@ test_cases:
     18DAF11028004A5555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 47.84314
   response: |-
     18DAF110103962266220F3F3
@@ -327,6 +352,7 @@ test_cases:
     18DAF1102800C85555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 55.29412
   response: |-
     18DAF110103962266220F3F3
@@ -340,6 +366,7 @@ test_cases:
     18DAF1102801825555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 55.68627
   response: |-
     18DAF110103962266220F3F3
@@ -353,6 +380,7 @@ test_cases:
     18DAF1102800FF5555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 62.7451
   response: |-
     18DAF110103962266220F3F3
@@ -366,6 +394,7 @@ test_cases:
     18DAF1102801305555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 53.33333
   response: |-
     18DAF110103962266220F3F3
@@ -379,6 +408,7 @@ test_cases:
     18DAF1102801245555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F3F3
@@ -392,6 +422,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 52.94118
   response: |-
     18DAF110103962266220F3F3
@@ -405,6 +436,7 @@ test_cases:
     18DAF1102800CE5555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 53.72549
   response: |-
     18DAF110103962266220F3F3
@@ -418,6 +450,7 @@ test_cases:
     18DAF1102800FB5555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 54.11765
   response: |-
     18DAF110103962266220F3F3
