--- a/tests/test_cases/2025/commands/DA10.10.222662.yaml
+++ b/tests/test_cases/2025/commands/DA10.10.222662.yaml
@@ -2,6 +2,7 @@ command_id: DA10.10.222662
 test_cases:
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F033
@@ -15,6 +16,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F033
@@ -28,6 +30,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 23.13725
   response: |-
     18DAF110103962266220F033
@@ -41,6 +44,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 46.27451
   response: |-
     18DAF110103962266220F033
@@ -54,6 +58,7 @@ test_cases:
     18DAF1102800325555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F033
@@ -67,6 +72,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F033
@@ -80,6 +86,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 46.66667
   response: |-
     18DAF110103962266220F033
@@ -93,6 +100,7 @@ test_cases:
     18DAF1102801015555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F033
@@ -106,6 +114,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F033
@@ -119,6 +128,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 56.07843
   response: |-
     18DAF110103962266220F033
@@ -132,6 +142,7 @@ test_cases:
     18DAF1102800F35555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 42.35294
   response: |-
     18DAF110103962266220F033
@@ -145,6 +156,7 @@ test_cases:
     18DAF1102800325555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F033
@@ -158,6 +170,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F033
@@ -171,6 +184,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 46.66667
   response: |-
     18DAF110103962266220F033
@@ -184,6 +198,7 @@ test_cases:
     18DAF1102800385555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F033
@@ -197,6 +212,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F033
@@ -210,6 +226,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F033
@@ -223,6 +240,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 50.19608
   response: |-
     18DAF110103962266220F033
@@ -236,6 +254,7 @@ test_cases:
     18DAF1102800F65555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 39.21569
   response: |-
     18DAF110103962266220F033
@@ -249,6 +268,7 @@ test_cases:
     18DAF1102800325555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 24.70588
   response: |-
     18DAF110103962266220F033
@@ -262,6 +282,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F033
@@ -275,6 +296,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F033
@@ -288,6 +310,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 54.11765
   response: |-
     18DAF110103962266220F033
@@ -301,6 +324,7 @@ test_cases:
     18DAF1102800FF5555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F033
@@ -314,6 +338,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 53.72549
   response: |-
     18DAF110103962266220F033
@@ -327,6 +352,7 @@ test_cases:
     18DAF1102800EB5555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 63.92157
   response: |-
     18DAF110103962266220F033
@@ -340,6 +366,7 @@ test_cases:
     18DAF1102800DE5555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 52.15686
   response: |-
     18DAF110103962266220F033
@@ -353,6 +380,7 @@ test_cases:
     18DAF1102800E85555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 53.33333
   response: |-
     18DAF110103962266220F033
@@ -366,6 +394,7 @@ test_cases:
     18DAF1102801845555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 50.98039
   response: |-
     18DAF110103962266220F033
@@ -379,6 +408,7 @@ test_cases:
     18DAF1102800AD5555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 44.70588
   response: |-
     18DAF110103962266220F033
@@ -392,6 +422,7 @@ test_cases:
     18DAF1102800F65555555555
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 0
   response: |-
     18DAF110103962266220F3F3
