--- a/tests/test_cases/2017/commands/DA10.10.222611.yaml
+++ b/tests/test_cases/2017/commands/DA10.10.222611.yaml
@@ -2,6 +2,7 @@ command_id: DA10.10.222611
 test_cases:
 - expected_values:
     HONDA_AIRGAS_RATIO: 11.96367
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007E4F682C
@@ -14,6 +15,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 12.10902
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007E8C6970
@@ -26,6 +28,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 11.99014
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007EA06867
@@ -38,6 +41,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 12.28981
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007EA26B03
@@ -50,6 +54,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 11.96816
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007EAE6836
@@ -62,6 +67,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 12.66127
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007EB96E3F
@@ -74,6 +80,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 12.19202
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007EBB6A29
@@ -86,6 +93,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 12.65499
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007EBB6E31
@@ -98,6 +106,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 12.43831
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007ECF6C4E
@@ -110,6 +119,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 12.50022
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007ED26CD8
@@ -122,6 +132,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 12.86225
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007ED76FFF
@@ -134,6 +145,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 14.59659
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007EEB7F19
@@ -146,6 +158,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 12.78419
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007F046F51
@@ -158,6 +171,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 12.76041
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007F0C6F1C
@@ -170,6 +184,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 12.87436
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007F0C701A
@@ -182,6 +197,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 12.87615
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007F12701E
@@ -194,6 +210,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 12.97261
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007F1A70F5
@@ -206,6 +223,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 12.99549
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007F1D7128
@@ -218,6 +236,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 12.96453
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007F1F70E3
@@ -230,6 +249,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 14.3198
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007F257CB0
@@ -242,6 +262,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 13.21306
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007F3E730D
@@ -254,6 +275,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 13.26152
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007F467379
@@ -266,6 +288,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 13.3149
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007F4F73F0
@@ -278,6 +301,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 14.06454
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007F517A77
@@ -290,6 +314,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 13.47461
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007F687554
@@ -302,6 +327,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 14.68093
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007F787FD5
@@ -314,6 +340,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 13.78146
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007F8F7800
@@ -326,6 +353,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 14.0282
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007FAD7A26
@@ -338,6 +366,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 14.09684
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007FB57ABF
@@ -350,6 +379,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 14.07261
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007FBB7A89
@@ -362,6 +392,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 14.70157
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007FC18003
@@ -374,6 +405,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 14.20585
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007FC97BB2
@@ -386,6 +418,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 14.61992
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007FE57F4D
@@ -398,6 +431,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 14.47951
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007FE77E14
@@ -410,6 +444,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 14.15336
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC007FF07B3D
@@ -422,6 +457,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 14.19329
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC0080007B96
@@ -434,6 +470,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 14.70022
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC0080008000
@@ -446,6 +483,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 14.70022
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC0080008000
@@ -458,6 +496,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 14.70022
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC0080008000
@@ -470,6 +509,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 14.70022
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC0080008000
@@ -482,6 +522,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 29.4
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC008026FFFF
@@ -494,6 +535,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 15.38616
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC00803D85F9
@@ -506,6 +548,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 29.4
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC00803FFFFF
@@ -518,6 +561,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 29.4
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC0082BEFFFF
@@ -530,6 +574,7 @@ test_cases:
     18DAF1102800005555555555
 - expected_values:
     HONDA_AIRGAS_RATIO: 29.4
+    HONDA_FUEL_AIR_RATIO: 0
   response: |-
     18DAF1101039622611000FFF
     18DAF11021FFFC0083E8FFFF
