--- a/tests/test_cases/2025/command_support.yaml
+++ b/tests/test_cases/2025/command_support.yaml
@@ -3,6 +3,7 @@ supported_commands_by_ecu:
   "DA10":
   - DA10.10.222610:HONDA_AC_CLUTCH,HONDA_GENERATOR
   - DA10.10.222611:HONDA_AIRGAS_RATIO,HONDA_FUEL_AIR_RATIO
+  - DA10.10.222612:HONDA_VTEC_CTRL
   - DA10.10.222615:HONDA_ACTIVE_CYL
   - DA10.10.222661:HONDA_FUELAIR_CAR
   - DA10.10.222662:HONDA_KNOCK_CONTROL,HONDA_KNOCK_CTRL,HONDA_VTC_DUTY
@@ -66,10 +67,14 @@ supported_commands_by_ecu:
   - 019E:EXH_RATE
   - 019F:FUELSYSA_B1,FUELSYSA_B1_SUP,FUELSYSA_B2,FUELSYSA_B2_SUP,FUELSYSA_B3,FUELSYSA_B3_SUP,FUELSYSA_B4,FUELSYSA_B4_SUP,FUELSYSB_B1,FUELSYSB_B1_SUP,FUELSYSB_B2,FUELSYSB_B2_SUP,FUELSYSB_B3,FUELSYSB_B3_SUP,FUELSYSB_B4,FUELSYSB_B4_SUP
   - 01A6:ODO
+  - DB33.0104:LOAD_PCT
   - DB33.010D:VSS
+  - DB33.0110:MAF
   - DB33.012F:FLI
   - DB33.0131:CLR_DIST
+  - DB33.0134:LAMBDA11_CURRENT,O2S11_CURRENT
   - DB33.0142:VPWR
+  - DB33.0144:EQ_RAT
   - DB33.01A6:ODO
 unsupported_commands_by_ecu:
   "DA0E":
