--- a/tests/test_cases/2025/commands/DB33.012F.yaml
+++ b/tests/test_cases/2025/commands/DB33.012F.yaml
@@ -1,5 +1,8 @@
 command_id: DB33.012F
 test_cases:
 - expected_values:
+    FLI: 10.19608
+  response: 18DAF11003412F1A
+- expected_values:
     FLI: 34.11765
   response: 18DAF11003412F57
