--- a/tests/test_cases/2025/commands/DB33.01A6.yaml
+++ b/tests/test_cases/2025/commands/DB33.01A6.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     ODO: 7869.2
   response: 18DAF1100641A600013364
+- expected_values:
+    ODO: 34419.2
+  response: 18DAF1100641A600054080
