--- a/tests/test_cases/2017/command_support.yaml
+++ b/tests/test_cases/2017/command_support.yaml
@@ -64,14 +64,18 @@ supported_commands_by_ecu:
   - 019F:FUELSYSA_B1,FUELSYSA_B1_SUP,FUELSYSA_B2,FUELSYSA_B2_SUP,FUELSYSA_B3,FUELSYSA_B3_SUP,FUELSYSA_B4,FUELSYSA_B4_SUP,FUELSYSB_B1,FUELSYSB_B1_SUP,FUELSYSB_B2,FUELSYSB_B2_SUP,FUELSYSB_B3,FUELSYSB_B3_SUP,FUELSYSB_B4,FUELSYSB_B4_SUP
   - DB33.0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - DB33.0103:FUELSYS1,FUELSYS2
+  - DB33.0104:LOAD_PCT
   - DB33.0105:ECT
   - DB33.010D:VSS
+  - DB33.0110:MAF
   - DB33.011C:OBDSUP
   - DB33.0121:MIL_DIST
+  - DB33.0124:LAMBDA11_VOLT,O2S11_VOLT
   - DB33.012F:FLI
   - DB33.0130:WARM_UPS
   - DB33.0131:CLR_DIST
   - DB33.0142:VPWR
+  - DB33.0144:EQ_RAT
   - DB33.019F:FUELSYSA_B1,FUELSYSA_B1_SUP,FUELSYSA_B2,FUELSYSA_B2_SUP,FUELSYSA_B3,FUELSYSA_B3_SUP,FUELSYSA_B4,FUELSYSA_B4_SUP,FUELSYSB_B1,FUELSYSB_B1_SUP,FUELSYSB_B2,FUELSYSB_B2_SUP,FUELSYSB_B3,FUELSYSB_B3_SUP,FUELSYSB_B4,FUELSYSB_B4_SUP
 unsupported_commands_by_ecu:
   "DA0E":
