--- a/tests/test_cases/2017/commands/DB33.0144.yaml
+++ b/tests/test_cases/2017/commands/DB33.0144.yaml
@@ -4,8 +4,11 @@ test_cases:
     EQ_RAT: 0.82551
   response: 18DAF11004414469AA
 - expected_values:
-    EQ_RAT: 0.99236
-  response: 18DAF1100441447F05
+    EQ_RAT: 0.99217
+  response: 18DAF1100441447EFF
+- expected_values:
+    EQ_RAT: 1.00002
+  response: 18DAF1100441448000
 - expected_values:
     EQ_RAT: 1.99
   response: 18DAF110044144FFFF
