--- a/tests/test_cases/2025/commands/DA10.10.222662.yaml
+++ b/tests/test_cases/2025/commands/DA10.10.222662.yaml
@@ -241,6 +241,20 @@ test_cases:
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
     HONDA_KNOCK_CTRL: 0
+    HONDA_VTC_DUTY: 0
+  response: |-
+    18DAF110103962266220F033
+    18DAF110217079FF00000000
+    18DAF1102200000000197D19
+    18DAF110237D000000000000
+    18DAF1102401010000002800
+    18DAF1102522000000000000
+    18DAF1102600393701A40000
+    18DAF1102713010046042B37
+    18DAF1102800005555555555
+- expected_values:
+    HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 50.19608
   response: |-
     18DAF110103962266220F033
