--- a/tests/test_cases/2017/commands/DA26.26.226001.yaml
+++ b/tests/test_cases/2017/commands/DA26.26.226001.yaml
@@ -31,6 +31,21 @@ test_cases:
     18DAF1262700000000000000
     18DAF1262800000000555555
 - expected_values:
+    HONDA_TP_FL: 217
+    HONDA_TP_FR: 218
+    HONDA_TP_RL: 216
+    HONDA_TP_RR: 249
+  response: |-
+    18DAF126103B6260010000FF
+    18DAF1262100F000000000DA
+    18DAF1262200D900F900D800
+    18DAF1262300000000000000
+    18DAF1262424231D1D000000
+    18DAF1262500000000000000
+    18DAF1262600000000000000
+    18DAF1262700000000000000
+    18DAF1262800000000555555
+- expected_values:
     HONDA_TP_FL: 238
     HONDA_TP_FR: 236
     HONDA_TP_RL: 235
