--- a/tests/test_cases/2025/command_support.yaml
+++ b/tests/test_cases/2025/command_support.yaml
@@ -9,7 +9,10 @@ supported_commands_by_ecu:
   - DA10.10.222661:HONDA_FUELAIR_CAR
   - DA10.10.222662:HONDA_KNOCK_CONTROL,HONDA_KNOCK_CTRL,HONDA_VTC_DUTY
   - DA10.10.222663:HONDA_MIS_1,HONDA_MIS_2,HONDA_MIS_3,HONDA_MIS_4
+  "DA26":
+  - DA26.26.226001:HONDA_TP_FL,HONDA_TP_FR,HONDA_TP_RL,HONDA_TP_RR
   "DA60":
+  - DA60.60.227028|fc=1:HONDA_AAT
   - DA60.60.227029:HONDA_FLV
   "DB33":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
@@ -95,13 +98,13 @@ unsupported_commands_by_ecu:
   - DA1D.1D.222203:HONDA_EOP
   - DA1D.1D.222221|fc=1:HONDA_GEAR
   - DA1D.1D.222660:HONDA_ODO_V2
+  - DA1D.1D.222663:HONDA_MIS1,HONDA_MIS2,HONDA_MIS3,HONDA_MIS4
   - DA1D.222221
   "DA1E":
   - DA1E.1E.223083:HONDA_ATF
   - DA1E.1E.223086:HONDA_GEAR_V2
   "DA26":
   - DA26.226001
-  - DA26.26.226001:HONDA_TP_FL,HONDA_TP_FR,HONDA_TP_RL,HONDA_TP_RR
   "DA33":
   - DA33.222201
   - DA33.223083
