Update command data for Honda/Pilot

--- a/tests/test_cases/2025/commands/DA10.10.222610.yaml
+++ b/tests/test_cases/2025/commands/DA10.10.222610.yaml
@@ -222,6 +222,19 @@ test_cases:
     18DAF11027C816720C04FFF8
     18DAF1102800005555555555
 - expected_values:
+    HONDA_AC_CLUTCH: 0
+    HONDA_GENERATOR: 0
+  response: |-
+    18DAF1101039622610FFDDB0
+    18DAF110216DE7FC0C88270A
+    18DAF110222F72983F412A00
+    18DAF1102363003300729100
+    18DAF11024011A0000000000
+    18DAF110250F000002AA00BB
+    18DAF1102632003E008C5700
+    18DAF11027C516A90C47FFB9
+    18DAF1102800005555555555
+- expected_values:
     HONDA_AC_CLUTCH: 1
     HONDA_GENERATOR: 0
   response: |-
