--- a/tests/test_cases/2025/commands/DA26.26.226001.yaml
+++ b/tests/test_cases/2025/commands/DA26.26.226001.yaml
@@ -1,6 +1,21 @@
 command_id: DA26.26.226001
 test_cases:
 - expected_values:
+    HONDA_TP_FL: 217
+    HONDA_TP_FR: 213
+    HONDA_TP_RL: 214
+    HONDA_TP_RR: 211
+  response: |-
+    18DAF126103B6260010000FF
+    18DAF1262100F000000000D5
+    18DAF1262200D900D300D600
+    18DAF1262300000000000000
+    18DAF126240B0E0B0D000000
+    18DAF1262500000000000000
+    18DAF1262600000000000000
+    18DAF1262700000000000000
+    18DAF1262800000000555555
+- expected_values:
     HONDA_TP_FL: 214
     HONDA_TP_FR: 214
     HONDA_TP_RL: 213
